# flow-metropolis-hastings

./: .gitignore  DESIGN.md  README.md  pyproject.toml
benchmarks/: REPORT.md  run_benchmarks.py  run_delayed_acceptance_benchmark.py
datasets/: photonic_data.h5
diffmcmc/core/: kernels.py  mh.py
diffmcmc/data/: io.py
diffmcmc/diagnostics/: metrics.py
diffmcmc/integrations/: emcee_move.py
diffmcmc/physics/: optics.py
diffmcmc/proposal/: flow.py  nets.py  training.py
diffmcmc/targets/: banana.py  funnel.py  mog.py  thin_film.py
examples/: demo_mog.py  run_photonic_inference.py
paper/: diffmcmc_revised.tex  generate_plots.py  generate_schematic.py  main.tex  references.bib  references_extra.bib
scripts/: generate_photonic_data.py
tests/: test_correctness.py  test_delayed_acceptance.py  test_density.py  test_smoke.py
