[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffmcmc"
version = "0.1.0"
description = "Diffusion/Flow-Matching Global Proposal Engine for MCMC"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Antigravity", email = "antigravity@deepmind.com"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib",
    "emcee",
    "arviz",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["diffmcmc*"]
